--- a/PI01_Procesos.ipynb
+++ b/PI01_Procesos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Juan Valentín Fogliatti - Proyecto Individual Nro1 - DS-05\n",
+    "# API para Plataformas de Streaming\n",
     "### Importación de librerías a utilizar"
    ]
   },
